--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "make web app maybe mobile app with reactJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/webpack-dashboard -- webpack-dev-server --inline --hot",
+    "dev":"./node_modules/.bin/webpack-dev-server --inline --hot"
   },
   "repository": {
     "type": "git",
